fix: Adjust z-index of right panel elements since it is now sibling to nav

--- a/assets/css/_properties_panel.scss
+++ b/assets/css/_properties_panel.scss
@@ -9,7 +9,7 @@
   right: 0;
   top: 0;
   width: 23.5rem;
-  z-index: 1002;
+  z-index: $right-panel-z-index;
 
   @media screen and (max-width: $mobile-max-width) {
     width: 100vw;
