--- a/assets/css/_swings_view.scss
+++ b/assets/css/_swings_view.scss
@@ -8,7 +8,7 @@
   position: absolute;
   right: 0;
   top: 0;
-  z-index: 1001;
+  z-index: $right-panel-z-index;
 
   .m-old-close-button {
     padding: 1.5rem;
