--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -8,7 +8,8 @@ $mobile-route-picker-width: 18.125rem;
 $shuttle-picker-width: 12.6rem;
 $view-header-height: 2.5rem;
 $vpp-location-padding: 1rem;
-
+$navbar-z-index: 1100;
+$right-panel-z-index: $navbar-z-index + 100;
 @import "base";
 @import "inter";
 @import "ui_kit";
